--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ ELASTIC_VERSION=8.17.4
 #
 # Superuser role, full access to cluster management and data indices.
 # https://www.elastic.co/guide/en/elasticsearch/reference/current/built-in-users.html
-ELASTIC_PASSWORD='changeme'
+ELASTIC_PASSWORD='fleq#333'
 
 # User 'logstash_internal' (custom)
 #
@@ -26,7 +26,7 @@ KIBANA_SYSTEM_PASSWORD='changeme'
 # The users Beats use to connect and send data to Elasticsearch.
 # https://www.elastic.co/guide/en/beats/metricbeat/current/feature-roles.html
 METRICBEAT_INTERNAL_PASSWORD=''
-FILEBEAT_INTERNAL_PASSWORD=''
+FILEBEAT_INTERNAL_PASSWORD='changeme'
 HEARTBEAT_INTERNAL_PASSWORD=''
 
 # User 'monitoring_internal' (custom)
@@ -39,4 +39,4 @@ MONITORING_INTERNAL_PASSWORD=''
 #
 # The user the Beats use when storing monitoring information in Elasticsearch.
 # https://www.elastic.co/guide/en/elasticsearch/reference/current/built-in-users.html
-BEATS_SYSTEM_PASSWORD=''
+BEATS_SYSTEM_PASSWORD='changeme'
