--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -8,12 +8,24 @@ input {
 	}
 }
 
-## Add your filters / logstash plugins configuration here
+filter {
+	json {
+	 	source => "message"
+	 	target => "parsed_message"
+	}
+
+ 	grok {
+ 		match => {
+ 			"[parsed_message][log]" => "\[%{TIMESTAMP_ISO8601:timestamp}\]\[%{LOGLEVEL:loglevel} \]\[%{DATA:source}\](?:\[%{DATA:thread}\])? %{GREEDYDATA:logmessage}"
+ 		}
+ 	}
+}
 
 output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
 		user => "logstash_internal"
 		password => "${LOGSTASH_INTERNAL_PASSWORD}"
+		index => "logstash-filebeat-test-data"
 	}
 }
