retrieve logstash logs with autodiscover

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -9,14 +9,14 @@ input {
 }
 
 filter {
-	json {
-	 	source => "message"
-	 	target => "parsed_message"
-	}
+	# json {
+	#  	source => "message"
+	#  	target => "parsed_message"
+	# }
 
  	grok {
  		match => {
- 			"[parsed_message][log]" => "\[%{TIMESTAMP_ISO8601:timestamp}\]\[%{LOGLEVEL:loglevel} \]\[%{DATA:source}\](?:\[%{DATA:thread}\])? %{GREEDYDATA:logmessage}"
+ 			"[message]" => "\[%{TIMESTAMP_ISO8601:timestamp}\]\[%{LOGLEVEL:loglevel} \]\[%{DATA:source}\](?:\[%{DATA:thread}\])? %{GREEDYDATA:logmessage}"
  		}
  	}
 }
